--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <meta name="keywords" content="svg, painter, online, create, browser, vector">
 
   <link href="/css/normalize.css" rel="stylesheet">
+  <link href="/css/muertofont.css" rel="stylesheet">
   <link rel="stylesheet" href="css/svg-painter.css">
-</head>
-<body>
 
+</head>
+
+<body>
 
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <defs>
@@ -90,6 +92,7 @@
   </div>
 </div>
 <a href="http://devmuerto.com" class="devmuerto-logo-corner"></a>
+<a href="http://devmuerto.com/donate/" class="donate-pig"><span class="icon icon-pig"></span></a>
 
 <script src="/js/jquery-2.1.4.min.js"></script>
 <script src="js/svg-painter.js"></script>
